# laolin-handdrawn-video-studio

./: .env.example  .gitignore  LICENSE  Makefile  README.en.md  README.md  README.zh-CN.md  app.py  pyproject.toml
docs/: ARCHITECTURE.md  MODELS.md  OPEN_SOURCE_PLAN.md
examples/: newton.md  photosynthesis.md  ten-second-demo.md
examples/cases/doodle-journey-west/: README.md
examples/cases/existing-lineart-portrait/: README.md
examples/cases/ink-wash-ancient-town/: README.md
examples/cases/nature/: README.md
src/whiteboard_skill/: __init__.py  cli.py  compose.py  config.py  image_gen.py  logging_setup.py  models.py  pipeline.py  preprocess.py  scene_split.py  tts.py  ui_state.py  whiteboard.py
src/whiteboard_skill/prompts/: __init__.py  scene_image_from_description.txt  scene_split.txt
src/whiteboard_skill/providers/: __init__.py  base.py  image_mock.py  image_openai.py  lineart.py  llm_mock.py  llm_openai.py  tts_edge.py  tts_mock.py
tests/: test_app.py  test_cli.py  test_lineart_provider.py  test_preprocess.py  test_scene_split.py  test_ui_state.py  test_whiteboard.py
tests/fixtures/: short_script.md
tools/lineart/: run_anime2sketch.py  run_doodle_color_cv.py  run_informative_drawings.py  run_inkwash_cv.py
