[project]
name = "laolin-handdrawn-video-studio"
version = "0.1.0"
description = "Laolin visual studio for ink-wash, doodle, line-art, character drawing, natural coloring, and dimensional seals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gradio>=6.20",
  "numpy>=1.26",
  "Pillow>=10.3",
  "pydantic>=2.7",
]

[project.optional-dependencies]
lineart = [
  "torch>=2.0",
  "torchvision>=0.15",
  "tqdm>=4.66",
]
full = [
  "typer>=0.12",
  "loguru>=0.7",
  "openai>=1.40",
  "edge-tts>=6.1",
  "torch>=2.0",
  "torchvision>=0.15",
  "tqdm>=4.66",
]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
laolin-video = "whiteboard_skill.cli:main"
whiteboard = "whiteboard_skill.cli:main"

[project.urls]
Homepage = "https://github.com/linjie2008/laolin-handdrawn-video-studio"
Repository = "https://github.com/linjie2008/laolin-handdrawn-video-studio"
Issues = "https://github.com/linjie2008/laolin-handdrawn-video-studio/issues"

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whiteboard_skill = ["prompts/*.txt", "assets/hands/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
